[package]
name = "cervus"
version = "0.1.0"
authors = ["losfair <zhy20000919@hotmail.com>"]
description = "The Cervus Subsystem for Linux"
license = "GPL-2.0"
repository = "https://github.com/cervus-v/cervus"

[lib]
crate-type = ["staticlib"]

[profile.release]
opt-level = 2
lto = true

[dependencies]
hexagon-e = "0.1.5"
